--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,5 +21,17 @@
         <action
             android:id="@+id/action_homeFragment_to_splashFragment"
             app:destination="@id/splashFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_commitsFragment"
+            app:destination="@id/commitsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/commitsFragment"
+        android:name="com.example.githubclientapp.view.CommitsFragment"
+        android:label="fragment_commits"
+        tools:layout="@layout/fragment_commits" >
+        <action
+            android:id="@+id/action_commitsFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
