--- a/app/src/main/res/layout/commit_card.xml
+++ b/app/src/main/res/layout/commit_card.xml
@@ -12,6 +12,7 @@
         android:layout_height="0dp"
         app:cornerRadius="4dp"
         android:elevation="0dp"
+        android:clickable="false"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/commit_date"
